Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/NoDefaultAbstract.out
NoDefaultAbstract.java:8:17: compiler.err.mod.not.allowed.here: default
1 error
